--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,13 @@ markdown_extensions:
     - toc:
         permalink: "¤"  # Adds a clickable permalink to each section heading
         toc_depth: 4
+    - pymdownx.arithmatex:
+        generic: true
+
+extra_javascript:
+    - javascripts/mathjax.js
+    - https://polyfill.io/v3/polyfill.min.js?features=es6
+    - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
     - search  # default search plugin; needs manually re-enabling when using any other plugins
